Bugfix: max width changes to skip horizontal scrolling.

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   grid-template-rows: 1fr 3fr;
   grid-template-columns: auto;
   gap: 2rem;
+  max-width: 100vw;
 }
 
 #section1 {
@@ -150,6 +151,7 @@ select {
     grid-template-rows: auto;
     height: 100vh;
     gap: 3rem;
+    max-width: 90vw;
   }
   #section1 {
     border-radius: 0;
